switch to 1.8 apis